<resources>
    <string name="app_name">Thesis</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="elderly_name">Elderly Name</string>
    <string name="elderly_username">Elderly Username</string>

    <string name="dummy_frag">Under Construction!</string>
    <string name="title_activity_authentication_activity">Authentication</string>

    <string name="title_section1">Safe Zones</string>
    <string name="title_section2">Dangerous Zones</string>
</resources>
