<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/elderly"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <!-- Name Label -->
        <uoa.di.gr.thesis.entities.CustomTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/name" />
        </uoa.di.gr.thesis.entities.CustomTextInputLayout>

        <!--  Username Label -->
        <uoa.di.gr.thesis.entities.CustomTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_username"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textEmailAddress"
                      android:hint="@string/username"/>
        </uoa.di.gr.thesis.entities.CustomTextInputLayout>

        <!-- ElderlyName Label -->
        <uoa.di.gr.thesis.entities.CustomTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText android:id="@+id/input_elderly_name"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textCapWords"
                      android:hint="@string/elderly_name" />
        </uoa.di.gr.thesis.entities.CustomTextInputLayout>

        <!-- ElderlyUserName Label -->
        <uoa.di.gr.thesis.entities.CustomTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_elderly_user_name"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textCapWords"
                      android:hint="@string/elderly_username" />
        </uoa.di.gr.thesis.entities.CustomTextInputLayout>

        <!-- Password Label -->
        <uoa.di.gr.thesis.entities.CustomTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </uoa.di.gr.thesis.entities.CustomTextInputLayout>
        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Create Account"/>

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="Already a member? Login"
            android:gravity="center"
            android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>